# DevOps

./: .gitignore  Makefile  Makefile.am  README.md  Series.cpp  Series.h  configure.ac  data.txt  main.cpp  series.1  series.elf
.github/workflows/: build-automake.yml  build-autotest.yml  build-branchMake.yml  build-package.yml  c-cpp.yml
tests/: Makefile.am  main.cpp
